tooling/nargo_cli/tests/snapshots/execution_success/regression_2660/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global foo: i32 = -1;

fn main(x: i32) {
    let y: i32 = x + foo;
    assert(y == 0);
}
